coreapp/src/main/java/org/example/calendar/fileops/DSLParser.jj
options {
    STATIC = false;
}

PARSER_BEGIN(MyDSLParser)

public class MyDSLParser {
    public static void main(String args[]) throws ParseException {
        MyDSLParser parser = new MyDSLParser(System.in);
        parser.Input();
    }
}

PARSER_END(MyDSLParser)

TOKEN :
{
    < EVENT: "event" >
  | < PLUGIN: "plugin" >
  | < SCRIPT: "script" >
  | < DATE: "([0-9]{4}-[0-9]{2}-[0-9]{2})" >
  | < TIME: "([0-9]{2}:[0-9]{2}:[0-9]{2})" >
  | < DURATION: "([0-9]+)" >
  | < ALL_DAY: "all-day" >
  | < IDENTIFIER: (["a"-"z","A"-"Z"]["a"-"z","A"-"Z","0"-"9","_"])+ >
  | < STRING: "\"" (~["\""])* "\"" >
  | < COLON: ":" >
  | < COMMA: "," >
  | < LBRACE: "{" >
  | < RBRACE: "}" >
}

void Input() :
{ }
{
  ( EventDeclaration() | PluginDeclaration() | ScriptDeclaration() )*
  <EOF>
}

void EventDeclaration() :
{ Token date, time, duration, title; }
{
  <EVENT> date=<DATE>
  (
    time=<TIME> duration=<DURATION> title=<STRING>
  |
    <ALL_DAY> title=<STRING>
  )
  { /* Handle event details here. */ }
}

void PluginDeclaration() :
{ Token id, key, value; }
{
  <PLUGIN> id=<IDENTIFIER> <LBRACE>
  (
    key=<IDENTIFIER> <COLON> value=<STRING> (<COMMA> key=<IDENTIFIER> <COLON> value=<STRING>)*
  )?
  <RBRACE>
  { /* Handle plugin details here. */ }
}

void ScriptDeclaration() :
{ Token script; }
{
  <SCRIPT> script=<STRING>
  { /* Handle script here. */ }
}
